--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: About Me
-description: This is what I do.
+title: About 마케터뷰
+description: 마케터뷰의 마음을 움직인 모든 것들에 대한 이야기
 background: '/img/bg-about.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+<p>차별화 된 상품을 찾는 당신의 눈처럼 세상의 눈은 똑같다</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
+<p>마케터의 마음을 움직인 모든 것들에 대한 이야기</p>
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<p class="mb-5">지극히 주관적인 마케터 관점의 세상 이야기</p>
