--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-title: About Marketerview
+title: Marketerview
 description: 마케터의 마음을 움직인 모든 것들에 대한 이야기
 background: '/img/bg-about.jpg'
 ---
 
 
-<p class="mb-5">별화 된 상품을 찾는 당신의 눈처럼 세상의 눈은 똑같다.
-마케터의 마음을 움직인 모든 것들에 대한 이야기, 지극히 주관적인 마케터 관점의 세상 이야기</p>
+<p class="mb-5">차별화 된 상품을 찾는 당신의 눈처럼 세상의 눈은 똑같다.<br>
+마케터의 마음을 움직인 모든 것들에 대한 이야기</br></p>
