--- a/about.html
+++ b/about.html
@@ -5,6 +5,6 @@ description: 마케터의 마음을 움직인 모든 것들에 대한 이야기
 background: '/img/bg-about.jpg'
 ---
 
-<img src="about.jpg">
+<img src="about.jpeg">
 <p style=text-align:center class="mb-5">차별화 된 상품을 찾는 당신의 눈처럼 세상의 눈은 똑같다.<br>
 마케터의 마음을 움직인 모든 것들에 대한 이야기</br></p>
